// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-reported-subjects returns reported subjects 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "modAction": "tools.ozone.history.defs#modActionPending",
    "status": "active",
    "subject": "record(0)",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "modAction": "tools.ozone.history.defs#modActionPending",
    "status": "active",
    "subject": "user(0)",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "modAction": "tools.ozone.history.defs#modActionPending",
    "status": "active",
    "subject": "record(1)",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "modAction": "tools.ozone.history.defs#modActionPending",
    "status": "active",
    "subject": "user(1)",
  },
]
`;

exports[`get-reported-subjects returns reported subjects 2`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "modAction": "tools.ozone.history.defs#modActionPending",
    "status": "active",
    "subject": "record(0)",
  },
]
`;
